# gs_server

./: .dockerignore  .env.example  .gitignore  Dockerfile.media  Dockerfile.worker  all_algorithm_report.json  docker-compose.proxy.yml  docker-compose.yml  pyproject.toml  requirements.txt  test_anysplat.py
alembic/: env.py
alembic/versions/: 20260601_0001_minio_permissions.py  20260601_0002_media_assets.py  20260601_0003_mesh_partial_status.py  20260601_0004_user_avatar.py  20260607_0005_single_task_workflow.py  20260607_0006_mesh_algorithm_nullable.py  20260608_0007_active_task_gpu_quotas.py
app/: main.py
app/core/: algorithm_stages.py  celery_app.py  config.py  database.py  dependencies.py  exceptions.py  quota_time.py  redis_client.py  security.py  storage.py
app/models/: __init__.py  file.py  task.py  upload.py  user.py
app/schemas/: file.py  reconstruction.py  upload.py  user.py
app/services/: auth_service.py  file_service.py  gpu_scheduler.py  media_service.py  task_service.py  (+2 more)
docs/: 3DGS运行指令.txt  3DGS重建+过滤+导出mesh指令.txt  3DGS重建+过滤指令.txt  anysplat.txt  api-reference.md  api.md  flutter_migration.md  openapi-mesh-dependencies.yaml
scripts/: init_db.py  seed_data.py  test_all_api_endpoints.py  test_all_reconstruction_algorithms.py  test_reconstruction_algorithms.py
tests/: conftest.py  test_anysplat.py  test_auth.py  test_dash_gaussian.py  test_dash_gaussian_mesh.py  test_files.py  test_gpu_scheduler.py  test_hunyuan3d.py  test_media.py  test_permissions.py  test_single_task_workflow.py  test_tasks.py  test_upload.py  test_user_avatar.py
(+15 files in other folders)
